--- a/src/index.css
+++ b/src/index.css
@@ -71,12 +71,12 @@
 }
 .products-container {
   max-width: 1200px;
-  margin: 2rem auto;
+  margin: 3rem auto;
 }
 
 .products-container h1 {
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   text-transform: uppercase;
   font-family: "Times New Roman", Times, serif;
   color: green;
@@ -134,6 +134,136 @@
 .cardbtn:hover {
   background-color: #5ad4c1;
   transform: scale(1.02);
+}
+.link {
+  text-decoration: none;
+}
+
+/*Cart Container Css  */
+.cart {
+  min-height: calc(100vh - 5rem);
+  width: clamp(350px, 40vw, 600px);
+  margin: 0 auto;
+  margin-top: 40px;
+  padding: 2.5rem 0;
+}
+.cart h2 {
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+.empty-cart {
+  text-transform: lowercase;
+  color: #64748b;
+  margin-top: 1rem;
+  text-align: center;
+}
+hr {
+  background: grey;
+  border-color: transparent;
+  margin-bottom: 1rem;
+  border-width: 1px;
+}
+.cart footer {
+  margin-top: 5rem;
+  text-align: center;
+}
+.cart-total {
+  text-transform: capitalize;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+.cart-total span {
+  background: #645cff;
+  display: inline-block;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+  color: white;
+}
+/*
+=============== 
+Cart Item
+===============
+*/
+.cart-item {
+  display: grid;
+  align-items: center;
+  grid-template-columns: auto 1fr auto;
+  column-gap: 1.5rem;
+  margin: 1rem 0;
+}
+
+.cart-item img {
+  width: 5rem;
+  height: 5rem;
+  object-fit: cover;
+}
+.cart-item h5 {
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+  letter-spacing: 2px;
+  color: #334155;
+}
+
+.item-price {
+  color: #64748b;
+  display: block;
+}
+.remove-btn {
+  color: #645cff;
+  letter-spacing: 1px;
+  cursor: pointer;
+  font-size: 0.85rem;
+  background: transparent;
+  border-color: transparent;
+  margin-top: 0.375rem;
+  margin-left: 0rem;
+  transition: 0.3s ease-in-out all;
+}
+.remove-btn:hover {
+  color: #0800a4;
+  font-weight: 600;
+}
+
+.clear-btn {
+  cursor: pointer;
+  color: white;
+  background: #645cff;
+  border: transparent;
+  border-radius: 0.25rem;
+  letter-spacing: 1px;
+  padding: 0.375rem 0.75rem;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  transition: 0.3s ease-in-out all;
+  text-transform: capitalize;
+  display: inline-block;
+}
+.clear-btn:hover {
+  background: #3c3799;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
+.amount-btn {
+  width: 1.5rem;
+  background: transparent;
+  border-color: transparent;
+  cursor: pointer;
+}
+.amount-icon {
+  font-size: 1.25rem;
+  color: #645cff;
+  transition: 0.3s ease-in-out all;
+}
+.amount-icon:hover {
+  color: #3c3799;
+}
+.amount {
+  margin-left: 0rem;
+  font-size: 1.25rem;
+  display: block;
+  text-align: center;
 }
 
 @media screen and (max-width: 768px) {
