--- a/src/components/Swiper.css
+++ b/src/components/Swiper.css
@@ -10,7 +10,6 @@
 :root {
   --primary: #6a59ff;
   --white: #ffffff;
-  --bg: #f5f5f5;
 }
 html {
   scroll-behavior: smooth;
@@ -34,10 +33,30 @@ html {
   background: #f9f9f9;
 }
 
-body {
-  font-size: 1.6rem;
-  background-color: #f4f5e3 !important;
+.home-bg {
+  background-image: url("../assets/images/floral_pattern.jpg");
+  background-repeat: no-repeat;
+  object-fit: cover;
+  background-size: 100%;
 }
+
+.about-bg {
+  background-image: url("../assets/images/about_background.jpg");
+  background-repeat: no-repeat;
+  object-fit: cover;
+  background-size: 100%;
+}
+@media screen and (max-width: 992px) {
+  .about-bg {
+    min-height: 100vh;
+    background-size: cover;
+  }
+  .home-bg {
+    min-height: 100vh;
+    background-size: cover;
+  }
+}
+
 .container {
   max-width: 124rem;
   padding: 0rem 1rem;
@@ -77,13 +96,15 @@ body {
   .swiper-slide img {
     width: 25rem !important; /* Adjust the image width for smaller screens */
     height: 30rem !important; /* Adjust the image height for smaller screens */
+    border-radius: 5rem !important;
+    padding-bottom: 2rem !important;
   }
 }
 
 .swiper-slide img {
   width: 30rem;
   height: 30rem;
-  border-radius: 2rem;
+  border-radius: 4rem;
   object-fit: cover;
 }
 
@@ -93,6 +114,8 @@ body {
 }
 
 .slider-controler {
+  margin-top: -2rem;
+  padding-top: 1rem;
   position: relative;
   bottom: 2rem;
   display: flex;
@@ -101,13 +124,13 @@ body {
 }
 
 .slider-controler .swiper-button-next {
-  left: 58% !important;
+  left: 60% !important;
   transform: translateX(-58%) !important;
 }
 
 @media (max-width: 990px) {
   .slider-controler .swiper-button-next {
-    left: 70% !important;
+    left: 80% !important;
     transform: translateX(-70%) !important;
   }
 }
@@ -121,7 +144,7 @@ body {
 
 @media (max-width: 990px) {
   .slider-controler .swiper-button-prev {
-    left: 30% !important;
+    left: 20% !important;
     transform: translateX(-30%) !important;
   }
 }
@@ -138,7 +161,7 @@ body {
   width: 3.5rem;
   height: 3.5rem;
   border-radius: 50%;
-  left: 42%;
+  left: 40%;
   transform: translateX(-42%);
   filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
 }
@@ -164,4 +187,6 @@ body {
 
 .swiper-pagination .swiper-pagination-bullet-active {
   background: blue;
+}
+.home-section {
 }
