--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,15 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 /* NavBar Design Section */
 
+.nav {
+  background-color: #a7c5e1;
+  opacity: 95%;
+  transition: opacity 0.4s ease-in-out;
+  color: white;
+}
+.nav:hover {
+  opacity: 100%;
+}
 .nav-container {
   width: fit-content;
   margin: 0 auto;
@@ -55,9 +64,12 @@
 }
 /*Hero Section Design */
 .hero-container {
-  margin-top: 4rem;
+  margin-top: 4.5rem;
   height: 30vh;
-  background-color: #bababa;
+  background: rgba(162, 137, 137, 0.2);
+  -webkit-backdrop-filter: blur(2px);
+  backdrop-filter: blur(2px);
+  border: 1px solid rgba(137, 121, 121, 0.1);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -67,7 +79,7 @@
   font-size: clamp(3rem, 6vw, 6rem);
   font-family: "Times New Roman", Times, serif;
   font-weight: 700;
-  color: #ffffff;
+  color: grey;
 }
 .products-container {
   max-width: 1200px;
@@ -76,6 +88,7 @@
 
 .products-container h1 {
   text-align: center;
+  padding-top: 20px;
   margin-bottom: 40px;
   text-transform: uppercase;
   font-family: "Times New Roman", Times, serif;
@@ -85,7 +98,7 @@
 
 .card-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 20px;
 }
 .Card-details {
@@ -145,12 +158,30 @@
   width: clamp(350px, 40vw, 600px);
   margin: 0 auto;
   margin-top: 40px;
-  padding: 2.5rem 0;
+  padding: 2.5rem 30px;
+  border-radius: 2rem;
+  background: rgba(255, 254, 254, 0.2);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+.cart-page {
+  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  margin: 8rem auto 3rem;
+  box-shadow: 2px 10px 12px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 .cart h2 {
   text-transform: uppercase;
   text-align: center;
+  font-family: "Times New Roman", Times, serif;
+  font-weight: 600;
   margin-bottom: 3rem;
+  color: rgb(51, 51, 163);
 }
 .empty-cart {
   text-transform: lowercase;
@@ -181,6 +212,28 @@ hr {
   border-radius: 0.25rem;
   color: white;
 }
+.continue {
+  background-color: #0f5132;
+  padding: 10px 20px;
+  display: flex;
+  margin: 1rem auto;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s ease-in-out;
+  color: white;
+  border: none;
+}
+.Link {
+  text-decoration: none;
+}
+.continue:hover {
+  background-color: #0cd65d;
+  color: white;
+  box-shadow: var(--shadow-1);
+  transform: scale(1.04);
+}
+
 /*
 =============== 
 Cart Item
@@ -295,5 +348,74 @@ Cart Item
   .cardbtn:hover {
     background-color: #00b69b;
     transform: none;
+  }
+}
+.about-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  align-items: center;
+}
+
+.aboutImg {
+  width: auto;
+  height: 600px;
+  margin-left: 10rem;
+  margin-top: 5rem;
+  border-radius: 2rem;
+}
+
+.title {
+  padding: 20px;
+}
+
+.title h2 {
+  margin-bottom: 3rem;
+  font-family: "Times New Roman", Times, serif;
+  font-weight: 600;
+  color: gray;
+}
+.title p {
+  font-family: "Times New Roman", Times, serif;
+  text-align: justify;
+  padding-right: 20px;
+  color: white;
+  font-weight: 200;
+}
+
+@media screen and (max-width: 992px) {
+  .about-container {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+  .aboutImg {
+    width: 100%;
+    height: auto;
+    margin-left: 0;
+    margin-top: 2rem;
+    border-radius: 1rem;
+  }
+  .title {
+    padding: 20px;
+  }
+  .title h2 {
+    margin-bottom: 1rem;
+    text-align: center;
+    background-color: wheat;
+    max-width: fit-content;
+    margin: 10px auto;
+    padding: 10px 15px;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05), 2px 2px 10px rgba(0, 0, 0, 1);
+  }
+  .title p {
+    padding: 30px 30px;
+    background: rgba(218, 224, 143, 0.65);
+    -webkit-backdrop-filter: blur(3px);
+    backdrop-filter: blur(3px);
+    border: 1px solid rgba(218, 224, 143, 0.325);
+    border-radius: 1rem;
+    color: black;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05), 2px 2px 10px rgba(0, 0, 0, 1);
   }
 }
