--- a/index.css
+++ b/index.css
@@ -362,6 +362,7 @@ Cart Item
   }
 }
 .about-container {
+  margin-top: 4rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
@@ -370,7 +371,7 @@ Cart Item
 
 .aboutImg {
   width: auto;
-  height: 600px;
+  height: 500px;
   margin-left: 10rem;
   margin-top: 5rem;
   border-radius: 2rem;
@@ -380,13 +381,13 @@ Cart Item
   padding: 20px;
 }
 
-.title h2 {
+.about_title h2 {
   margin-bottom: 3rem;
   font-family: "Times New Roman", Times, serif;
   font-weight: 600;
   color: gray;
 }
-.title p {
+.about_title p {
   font-family: "Times New Roman", Times, serif;
   text-align: justify;
   padding-right: 20px;
@@ -396,6 +397,7 @@ Cart Item
 
 @media screen and (max-width: 992px) {
   .about-container {
+    margin-top: 0;
     grid-template-columns: 1fr;
     gap: 20px;
   }
@@ -420,6 +422,8 @@ Cart Item
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05), 2px 2px 10px rgba(0, 0, 0, 1);
   }
   .about_title p {
+    max-width: 400px;
+    margin: 2rem auto;
     padding: 30px 30px;
     background: rgba(218, 224, 143, 0.65);
     -webkit-backdrop-filter: blur(3px);
@@ -428,6 +432,10 @@ Cart Item
     border-radius: 1rem;
     color: black;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05), 2px 2px 10px rgba(0, 0, 0, 1);
+  }
+  .contactForm {
+    margin: 0 auto;
+    max-width: 400px;
   }
 }
 
@@ -522,4 +530,41 @@ Cart Item
   100% {
     transform: scale(1);
   }
+}
+.contactForm {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 500px;
+  padding: 20px;
+}
+
+label {
+  display: flex;
+  align-items: center; /* Align items vertically */
+  gap: 20px;
+  color: sienna;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+input {
+  flex: 1; /* Take up remaining space */
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+}
+
+.sendbtn {
+  background-color: #0cd65d;
+  padding: 10px 20px;
+  max-width: fit-content;
+  margin: 0 auto;
+  color: white;
+  font-size: 20px;
+  border: none;
+  border-radius: 10px;
+}
+textarea {
+  border-radius: 10px;
+  padding: 10px;
 }
