--- a/src/components/Swiper.css
+++ b/src/components/Swiper.css
@@ -64,7 +64,7 @@ html {
 }
 
 .heading {
-  margin-top: 5rem;
+  margin-top: 3rem;
   padding: 2rem 0;
   font-size: 3.5rem;
   text-align: center;
@@ -85,7 +85,7 @@ html {
   position: relative;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 792px) {
   .swiper_container {
     height: 35rem; /* Adjust the height for smaller screens */
   }
@@ -96,16 +96,17 @@ html {
   .swiper-slide img {
     width: 25rem !important; /* Adjust the image width for smaller screens */
     height: 30rem !important; /* Adjust the image height for smaller screens */
-    border-radius: 5rem !important;
+    border-radius: 2rem !important;
     padding-bottom: 2rem !important;
   }
 }
 
 .swiper-slide img {
   width: 30rem;
-  height: 30rem;
-  border-radius: 4rem;
+  height: 35rem;
+  border-radius: 6rem;
   object-fit: cover;
+  padding-inline: 50px;
 }
 
 .swiper-slide-shadow-left,
@@ -114,7 +115,7 @@ html {
 }
 
 .slider-controler {
-  margin-top: -2rem;
+  margin-top: 0rem;
   padding-top: 1rem;
   position: relative;
   bottom: 2rem;
