--- a/src/index.css
+++ b/src/index.css
@@ -64,11 +64,9 @@
 }
 /*Hero Section Design */
 .hero-container {
-  margin-top: 4.5rem;
+  margin-top: 4rem;
   height: 30vh;
-  background: rgba(162, 137, 137, 0.2);
-  -webkit-backdrop-filter: blur(2px);
-  backdrop-filter: blur(2px);
+  background-image: url("./assets/images/movies_Thumbnail.jpeg");
   border: 1px solid rgba(137, 121, 121, 0.1);
   display: flex;
   justify-content: center;
@@ -79,7 +77,7 @@
   font-size: clamp(3rem, 6vw, 6rem);
   font-family: "Times New Roman", Times, serif;
   font-weight: 700;
-  color: grey;
+  color: goldenrod;
 }
 .products-container {
   max-width: 1200px;
@@ -92,7 +90,7 @@
   margin-bottom: 40px;
   text-transform: uppercase;
   font-family: "Times New Roman", Times, serif;
-  color: green;
+  color: grey;
   font-weight: 600;
 }
 
@@ -101,11 +99,23 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
 }
+
 .Card-details {
   border: none;
   box-shadow: 5px 10px 15px -3px rgba(0, 0, 0, 0.1),
     0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
+.Card-details img {
+  transition: all ease-in-out 0.3s;
+  box-shadow: 5px 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+}
+.Card-details img:hover {
+  transform: scale(1.04);
+  border-radius: 10px;
+}
+
 .Card-details .title {
   text-align: center;
   font-family: "Times New Roman", Times, serif;
@@ -331,6 +341,7 @@ Cart Item
   }
   .hero-container h1 {
     text-align: center;
+    color: goldenrod;
   }
   .products-container {
     max-width: 400px;
@@ -351,6 +362,7 @@ Cart Item
   }
 }
 .about-container {
+  margin-top: 4rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
@@ -359,7 +371,7 @@ Cart Item
 
 .aboutImg {
   width: auto;
-  height: 600px;
+  height: 500px;
   margin-left: 10rem;
   margin-top: 5rem;
   border-radius: 2rem;
@@ -369,13 +381,13 @@ Cart Item
   padding: 20px;
 }
 
-.title h2 {
+.about_title h2 {
   margin-bottom: 3rem;
   font-family: "Times New Roman", Times, serif;
   font-weight: 600;
   color: gray;
 }
-.title p {
+.about_title p {
   font-family: "Times New Roman", Times, serif;
   text-align: justify;
   padding-right: 20px;
@@ -385,6 +397,7 @@ Cart Item
 
 @media screen and (max-width: 992px) {
   .about-container {
+    margin-top: 0;
     grid-template-columns: 1fr;
     gap: 20px;
   }
@@ -395,10 +408,10 @@ Cart Item
     margin-top: 2rem;
     border-radius: 1rem;
   }
-  .title {
+  .about_title {
     padding: 20px;
   }
-  .title h2 {
+  .about_title h2 {
     margin-bottom: 1rem;
     text-align: center;
     background-color: wheat;
@@ -408,7 +421,9 @@ Cart Item
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05), 2px 2px 10px rgba(0, 0, 0, 1);
   }
-  .title p {
+  .about_title p {
+    max-width: 400px;
+    margin: 2rem auto;
     padding: 30px 30px;
     background: rgba(218, 224, 143, 0.65);
     -webkit-backdrop-filter: blur(3px);
@@ -418,4 +433,138 @@ Cart Item
     color: black;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05), 2px 2px 10px rgba(0, 0, 0, 1);
   }
+  .contactForm {
+    margin: 0 auto;
+    max-width: 400px;
+  }
+}
+
+/* MovieDetails.css */
+
+.movie_details_container {
+  display: flex;
+  justify-content: space-between;
+  gap: 100px;
+  align-items: flex-start;
+  max-width: 1400px;
+  margin: 8rem auto;
+  padding: 20px;
+}
+
+.movie_details_poster {
+  width: 300px;
+  height: auto;
+  margin-right: 20px;
+  border-radius: 10px;
+}
+
+.movie_details {
+  flex: 1;
+}
+
+.movie_details h2 {
+  font-size: 30px;
+  margin-bottom: 10px;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  color: #bababa;
+}
+
+.movie_details p {
+  margin-bottom: 8px;
+  color: #334155;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  word-spacing: 1.4px;
+}
+
+.back_button {
+  margin-top: 20px;
+}
+.trailer_btn {
+  display: flex;
+  width: fit-content;
+  margin-top: 2rem;
+  text-decoration: none;
+  background-color: #64748b;
+  padding: 10px 15px;
+  color: white;
+  border-radius: 5px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05), 0px 1px 5px rgba(0, 0, 0, 1);
+  transition: box-shadow 0.3s ease, background-color 0.3s ease;
+}
+
+.trailer_btn:hover {
+  background-color: #4d5a70;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+.backbtn {
+  margin-top: 2rem;
+  text-decoration: none;
+  background-color: #64748b;
+  padding: 10px 15px;
+  color: white;
+  border-radius: 5px;
+  transition: box-shadow 0.3s ease, background-color 0.3s ease;
+  border: none;
+}
+.backbtn:hover {
+  background-color: #4d5a70;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+}
+
+.bump-animation {
+  animation: bump 300ms ease-out;
+}
+@keyframes bump {
+  0% {
+    transform: scale(1);
+  }
+  10% {
+    transform: scale(0.9);
+  }
+  30% {
+    transform: scale(1.1);
+  }
+  50% {
+    transform: scale(1.15);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.contactForm {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 500px;
+  padding: 20px;
+}
+
+label {
+  display: flex;
+  align-items: center; /* Align items vertically */
+  gap: 20px;
+  color: sienna;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+input {
+  flex: 1; /* Take up remaining space */
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+}
+
+.sendbtn {
+  background-color: #0cd65d;
+  padding: 10px 20px;
+  max-width: fit-content;
+  margin: 0 auto;
+  color: white;
+  font-size: 20px;
+  border: none;
+  border-radius: 10px;
+}
+textarea {
+  border-radius: 10px;
+  padding: 10px;
 }
